@@ -12,9 +12,16 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 9.6
 
+** Specific languages in error messages
+Rather than just say "<feature> is not supported in <current-lang>", now says
+"<feature> is not supported until <later-lang>."
+
 ** More constructor & destructor warning checks
 Constructors and destructors are now checked for `throw`.  Constructor
 parameters are now checked for warnings.
+
+* `throw()` in C++20
+`throw()` is no longer supported in C++20.
 
 
 * Changes in Cdecl 9.5.1
